--- a/css/style.css
+++ b/css/style.css
@@ -101,7 +101,7 @@ header button:hover {
 
 section {
   padding: 40px;
-  margin-top: 100px;
+  margin-top: 60px;
 }
 
 section h1 {
@@ -127,6 +127,31 @@ section article p {
 
 section article p:nth-child(2) {
   font-weight: bold;
+}
+
+section div {
+  margin: 40px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0 auto;
+  background-color: var(--preto);
+  padding: 60px 30px 30px 30px;
+  margin-top: 40px;
+  border-radius: 70px;
+}
+
+section div h5 {
+  color: var(--amarelo);
+  font-size: 50px;
+  text-align: center;
+  margin-top: 20px;
+}
+
+section div p {
+  color: var(--branco);
+  text-align: center;
+  margin-top: 20px;
 }
 
 footer {
