--- a/css/style.css
+++ b/css/style.css
@@ -67,8 +67,9 @@ nav ul {
   left: 0;
   background-color: rgba(255, 255, 255, 0.15);
   backdrop-filter: blur(25px);
-  padding: 60px;
+  padding: 5%;
   border-radius: 0 40px 40px 0;
+  width: 50%;
 }
 
 nav ul li {
@@ -76,7 +77,7 @@ nav ul li {
   list-style: none;
   margin: 0 auto;
   text-align: center;
-  padding: 40px 0;
+  padding: 1rem 0;
 }
 
 nav ul li:last-child {
@@ -87,7 +88,7 @@ li a {
   color: var(--branco);
   font-weight: 200;
   text-align: center;
-  font-size: 40px;
+  font-size: 1.5rem;
   text-transform: uppercase;
   width: 80%;
 }
@@ -110,20 +111,26 @@ nav img {
 }
 
 .line {
-  width: 80px;
+  width: 4rem;
   height: 9px;
   border-radius: 15px;
   background-color: var(--branco);
 }
 
 #click_close {
-  height: 57px;
   cursor: pointer;
 }
 
+.container_close {
+  position: relative;
+  top: 40px;
+  left: 80%;
+  margin-bottom: 80px;
+}
+
 .close_line {
-  position: fixed;
-  width: 80px;
+  position: absolute;
+  width: 4rem;
   height: 9px;
   border-radius: 15px;
   background-color: var(--branco);
@@ -147,7 +154,7 @@ header > div h1 {
   text-align: center;
   color: var(--branco);
   text-transform: uppercase;
-  font-size: 90px;
+  font-size: 3.5rem;
   font-weight: 800;
 }
 
@@ -157,7 +164,7 @@ header > div p {
   max-width: 65%;
   margin: 0 auto;
   line-height: 30pt;
-  font-size: 24px;
+  font-size: 1.5rem;
 }
 
 header > div span {
@@ -426,6 +433,32 @@ footer form button {
   text-transform: uppercase;
 }
 
+@media only screen and (min-device-width: 992px) {
+  .section-servicos > div > article {
+    background-image: url(../img/web/s3ft1.png);
+  }
+
+  .section-servicos > div > article:nth-child(2) {
+    background-image: url(../img/web/s3ft2.png);
+  }
+
+  .section-servicos > div > article:last-child {
+    background-image: url(../img/web/s3ft3.png);
+  }
+
+  .section-diferenciais > div > article {
+    background-image: url(../img/web/s4ft1.png);
+  }
+
+  .section-diferenciais > div > article:nth-child(2) {
+    background-image: url(../img/web/s4ft2.png);
+  }
+
+  .section-diferenciais > div > article:last-child {
+    background-image: url(../img/web/s4ft3.png);
+  }
+}
+
 @media only screen and (min-width: 992px) {
   header {
     background-image: url(../img/web/s1ft1.png);
@@ -616,5 +649,6 @@ footer form button {
 
   footer form textarea {
     padding: 20px;
+    font-size: 20px;
   }
 }
